Mon Jun 16 21:58:38 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_each, strio_readlines): IO#each and
	  IO#readlines do not affect $_.  [ruby-core:17277]

Mon Jun 16 18:52:47 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/thwait.rb (ThreadsWait): Exception2MessageMapper no longer has
	  extend_to method.  [ruby-core:17267]

Mon Jun 16 14:46:25 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/e2mmap.rb (E2MM.def_e2message): typo.

Mon Jun 16 09:43:27 2008  Akinori MUSHA  <knu@iDaemons.org>

	* enumerator.c (enumerator_with_object, Init_Enumerator):
	  Temporarily back out with_memo, for which we need a better name.

Mon Jun 16 07:14:48 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_readline, strio_each)
	  (strio_readlines): set lastline.  [ruby-core:17257]

Mon Jun 16 01:49:39 2008  Koichi Sasada  <ko1@atdot.net>

	* eval.c (rb_f_block_given_p): fix to skip class frame.
	  [ruby-core:14813]

	* KNOWNBUGS.rb, bootstraptest/test_method.rb: move solved test.

Mon Jun 16 01:48:08 2008  Koichi Sasada  <ko1@atdot.net>

	* vm_dump.c (vm_stack_dump_raw): disable verbose debug output.

Mon Jun 16 01:33:08 2008  Koichi Sasada  <ko1@atdot.net>

	* vm_core.h, thread.c: rename global_interpreter_lock to
	  global_vm_lock.

Sun Jun 15 18:40:35 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/syck/rubyext.c (yaml_org_handler): associate encoding.

	* ext/syck/rubyext.c (syck_genericresolver_node_import): ditto.

Sun Jun 15 18:17:03 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_core.h (rb_vm_t), vm.c (rb_vm_mark): moved preallocated special
	  exceptions.

	* eval.c (Init_eval), gc.c (Init_GC), proc.c (Init_Proc): freeze
	  preallocated special exceptions.

	* eval.c (rb_longjmp): duplicate the thrown exception to set backtrace
	  if it was frozen.

	* gc.c (rb_memerror): raise nomem_error without backtrace if failed to
	  make backtrace.
