@@ -1,3 +1,11 @@
+Tue Jun 17 01:52:50 2008  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
+
+	* ext/tk/tcltklib.c: SEGV when exit.
+
+	* ext/tk/lib/tk.rb: add a check for safety to Tk.exit.
+
+	* ext/tk/sample/irbtkw.rbw: freezes when receives SIGINT.
+
 Mon Jun 16 21:58:38 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/stringio/stringio.c (strio_each, strio_readlines): IO#each and
